--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -69,7 +69,7 @@ a.routerLink.active .circle {
 }
 .label{
   padding-bottom: 8px;
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
 
 .filter,
@@ -165,6 +165,14 @@ a.routerLink.active .circle {
   border: 1px solid #ced4da;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; 
+}
+
+.editaTableCell {
+  border: none;
+  outline: none;
+  padding: 0;
+  background: transparent;
+  width: 100%;  
 }
 
 @media screen and (max-width:1400px) and (min-width:280px),
