--- a/src/app/features/auth/verification/verification.component.css
+++ b/src/app/features/auth/verification/verification.component.css
@@ -7,16 +7,12 @@
 .verify-button {
     max-width: 450px;
     max-height: 90px;
-    /* left: 110px;
-    top: 450px; */
-    border-radius: 0;
     display: flex;
-    /* align-items: center; */
     background-color: #cdd2da;
-    /* vertical-align: middle; */
     margin-bottom: 5px;
     padding: 10px 0;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .verify-button:hover {
