--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -57,6 +57,7 @@
             <form [formGroup]="filterForm">
               <div class="mb-3">
                 <label for="condition" class="form-label">Condition</label>
+
                 <select formControlName="operator" id="condition" class="form-select" aria-label="Default select example">
                   <option *ngFor="let condition of conditions" [value]="condition.value">
                     {{ condition.label }}
@@ -65,7 +66,13 @@
               </div>
               <div class="mb-5">
                 <label for="value" class="form-label">Value</label>
-                <input formControlName="value" id="value" type="text" class="form-control">
+                <span *ngIf="conditionsType !== 'date'">
+                  <input formControlName="value" id="value" type="text" class="form-control">
+                </span>
+                <span *ngIf="conditionsType === 'date'">
+                  <input formControlName="value" type="date" id="value" class="form-control" aria-label="Value">
+                  <!-- <p-calendar formControlName="value" selectionMode="range" [readonlyInput]="true"></p-calendar> -->
+                </span>
               </div>
               <div class="text-center">
                 <a id="addFilterBtn" (click)="addFilter()" class="btn btn-primary ps-5 pe-5">Apply</a>
