Ability to create quotation  and view existing quotations

--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -1,6 +1,13 @@
 .title{
     color:black
 }
+.title1{
+    color: #000;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 .required{
     color:red
 }
@@ -25,3 +32,4 @@ line-height: normal;
     padding-right: 13px;
     white-space: nowrap;
 }
+
