--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -10,7 +10,7 @@
                 <label for=""class="quote-label">Source<span class="required" ></span></label>
                 <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="source"  placement="right" >
                     <option selected="true" disabled="disabled"></option>
-                    <option value="walkin">Walk In </option>
+                    <option value="10">Walk In </option>
                     <option value="email">Email</option>
                     <option value="broker">Broker/Agent</option>
 
@@ -139,11 +139,11 @@
                 <label for=""class="quote-label">Payment Frequency</label>
                 <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="fequencyOfPayment"  placement="right" >
                     <option selected="true" disabled="disabled"></option>
-                    <option value="Annually">Annually</option>
-                    <option value="Semi Annually">Semi Annually</option>
-                    <option value="Quarterly">Quarterly</option>
-                    <option value="Monthly">Monthly</option>
-                    <option value="One-Off">One-Off</option>
+                    <option value="A">Annually</option>
+                    <option value="S">Semi Annually</option>
+                    <option value="Q">Quarterly</option>
+                    <option value="M">Monthly</option>
+                    <option value="O">One-Off</option>
                   </select >
             </div>
 
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div>
-            <p class="mb-4">Import risks <input type="checkbox" class="ml-3"></p>
+            <p class="mb-4">Import risks <input type="checkbox" (change)="isChecked = !isChecked" id="importRisks" class="ml-3"></p>
             
             <p class="more" data-bs-toggle="collapse" data-bs-target="#collapseProductClauses">Product Clauses</p>
             <div class="collapse" id="collapseProductClauses">
@@ -163,6 +163,7 @@
                 [resizableColumns]="true" 
                 styleClass="p-datatable-sm"
                 class='ui-datatable' 
+               
                 [tableStyle]="{ 'min-width': '50rem' }">
                     <ng-template pTemplate="header">
                         <tr>
@@ -177,8 +178,16 @@
                             <td>
                                 <p-tableCheckbox [value]="clause"></p-tableCheckbox>
                             </td>
-                            <td>{{ clause.heading }}</td>
-                            <td style="width:10%" >{{ clause.wording }}</td>
+                            <td style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            overflow-y: auto;
+                            max-width: 250px;">{{ clause.heading }}</td>
+                            <td style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            max-width:300px;
+                            overflow-y: auto;">{{ clause.wording }}</td>
                             <td>{{ clause.is_editable }}</td>
                             
                         </tr>
@@ -191,11 +200,51 @@
 
 </form>
     <div class="float-end mb-4">
-        <button class="btn btn-primary">Assign Tasks</button>
-        <button class="btn btn-primary " (click)="saveQuotationDetails()">Next</button>
+        <button class="btn btn-primary" (click)="saveQuotationDetails()">Assign Tasks</button>
+        <button class="btn btn-primary"  (click)="getExistingQuotations()" >Next</button>
     </div>
     
-     
+    
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content" style="min-width: 700px">
+                <div class="modal-body">
+                   <p class="title1 mb-4">Client's Already Existing Quotations</p>
+                   <p-table 
+                   [value]="quotation"
+                   [resizableColumns]="true" 
+                   styleClass="p-datatable-sm"
+                   styleClass="p-datatable-striped"
+                   class='ui-datatable' 
+                   [tableStyle]="{ 'min-width': '50rem' }">
+                       <ng-template pTemplate="header">
+                           <tr>
+                               <th>Quotation Number</th>
+                               <th>Status</th>
+                               <th>Cover From</th>
+                               <th>Cover To</th>
+                           </tr>
+                       </ng-template>
+                       <ng-template pTemplate="body" let-data>
+                           <tr>
+                               <td>{{data.no}}</td>
+                               <td>{{data.status}}</td>
+                               <td>{{data.coverFrom}}</td>
+                               <td>{{data.coverTo}}</td> 
+                           </tr>
+                       </ng-template>
+                   </p-table>
+
+                   <p class="title1 mt-4 float-start">Do you wish to Continue Creating the Quotation?</p>
+                   <div class="mt-3 float-end">
+                    <button class="btn btn-outline-primary" data-bs-dismiss="modal">No,I don't</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;" (click)="saveQuotationDetails()">Yes, continue</button>
+                   </div>
+                  </div>
+            </div>
+          </div>
+    </div>
+   
            
               
             
